fix header/footer nav media query gap - fixes #466

--- a/src/sass/layout/_mediaquery.scss
+++ b/src/sass/layout/_mediaquery.scss
@@ -64,7 +64,7 @@
 }
 
 
-@media all and (min-width : 660px) {
+@include breakpoints(nav) {
   .navbar-fixed-bottom {
     display: none;
   }
